# BBEngine

./: .gitignore  README.md
BBEngine/: CMakeLists.txt  CMakePresets.json
BBEngine/BBEngine/: BBEngine.cpp  BBEngine.h  BBMemory.h  CMakeLists.txt  Todo.txt  main.cpp
BBEngine/BBEngine/Allocators/: Allocator.cpp  Allocator.h  ArenaAlloc.cpp  ArenaAlloc.h  ArenaAllocator.cpp  ArenaAllocator.h  BuddyAllocator.cpp  BuddyAllocator.h  FreeListAllocator.cpp  FreeListAllocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
BBEngine/BBEngine/Containers/: Pool.cpp
BBEngine/BBEngine/ECS/: ComponentArray.h  ComponentManager.h  ECSInclude.h  ECSManager.h  EntityManager.cpp  EntityManager.h  SystemManager.h
BBEngine/BBEngine/ECS/Components/: Mesh.h  Transform.h
BBEngine/BBEngine/ECS/Systems/: RenderSystem.cpp  RenderSystem.h  System.h
BBEngine/BBEngine/FileLoaders/: BMPLoader.cpp
BBEngine/BBEngine/Helper/: Utility.h
BBEngine/BBEngine/Include/: BBEngine.h  BBWindow.h  Camera.h  UserInterface.h
BBEngine/BBEngine/Include/Allocators/: ArenaAllocator.h  BuddyAllocator.h  FreeListAllocator.h  PoolAllocator.h
BBEngine/BBEngine/Include/Containers/: FixedArray.h  HashMap.h  LinkedList.h  MemoryPool.h  Pool.h  Queue.h  Vector.h
BBEngine/BBEngine/Include/FileLoaders/: BMPLoader.h  WAVLoader.h
BBEngine/BBEngine/Include/GFXInclude/: BBGFXPlatform.h
BBEngine/BBEngine/Include/GameLib/: BBComponent.h  BBObject.h  GameObject.h  Transform.h  TransformBuf.h
BBEngine/BBEngine/Include/Input/: Mouse.h
BBEngine/BBEngine/Include/Logger/: Logger.h
BBEngine/BBEngine/Include/System/: BBFStream.h  BBString.h  FileHandler.h
BBEngine/BBEngine/Include/Thread/: Thread.h  ThreadPool.h
BBEngine/BBEngine/Include/Utility/: BBMemory.h  BBTimer.h  HelperFunctions.h  ImageProcessing.h
BBEngine/BBEngine/Logger/: Logger.cpp  Logger.h
BBEngine/BBEngine/Source/: BBEngine.cpp  UserInterface.cpp
BBEngine/BBEngine/Source/Allocators/: ArenaAllocator.cpp  BuddyAllocator.cpp  FreeListAllocator.cpp
BBEngine/BBEngine/Source/FileLoaders/: BMPLoader.cpp  WAVLoader.cpp
BBEngine/BBEngine/Source/GameLib/: BBObject.cpp  GameObject.cpp  Transform.cpp  TransformBuf.cpp
BBEngine/BBEngine/Source/Input/: Keyboard.cpp  Mouse.cpp
BBEngine/BBEngine/Source/Logger/: Logger.cpp
BBEngine/BBEngine/Source/System/: BBFStream.cpp  BBString.cpp
BBEngine/BBEngine/Source/Thread/: ThreadPool.cpp
BBEngine/BBEngine/Source/Timer/: BBTimer.cpp
BBEngine/BBEngine/Source/Utility/: ImageProcessing.cpp
BBEngine/BBEngine/Source/Window/: BBWindow.cpp
BBEngine/BBEngine/System/FileHandler/: FileHandler_Windows.cpp
BBEngine/BBEngine/Thread/: Thread.cpp  Thread.h  ThreadPool.cpp
BBEngine/BBEngine/Timer/: BBTimer.cpp  BBTimer.h
BBEngine/BBEngine/Utility/: ImageProcessing.cpp
BBEngine/BBGame/: CMakeLists.txt  main.cpp
BBEngine/BBGame/Assets/Data/: data.json
BBEngine/BBMath/: CMakeLists.txt
BBEngine/BBMath/Include/: BBMath.h  Matrix3x3.h  Matrix4x4.h  Vector3.h  Vector4.h
BBEngine/BBMath/source/: Matrix4x4.cpp  Vector3.cpp  Vector4.cpp
BBEngine/BBRenderer/: BBRenderer.cpp  BBRenderer.h  CMakeLists.txt
BBEngine/BBRenderer/AgnosticLayer/: AgnosticDefinitions.h
BBEngine/BBRenderer/AgnosticLayer/Bindable/: Texture.h  VertexBuffer.h
BBEngine/BBRenderer/BBDX11/: CMakeLists.txt
BBEngine/BBRenderer/BBDX11/Include/: Camera.h  Graphics.h  dxerr.h
BBEngine/BBRenderer/BBDX11/Shader/: Lights.h  Materials.h  PixelShader.hlsl  ShaderDefines.h  VSCubeMap.hlsl
BBEngine/BBRenderer/BBDX12/: CMakeLists.txt
BBEngine/BBRenderer/BBDX12/Include/: DescriptorFreeList.h  Graphics.h
BBEngine/BBRenderer/BBDX12/Source/: DescriptorFreeList.cpp  Graphics.cpp
BBEngine/BBRenderer/BBException/: BBException.cpp  BBException.h
BBEngine/BBRenderer/Bindable/: IndexBuffer.cpp  Topology.cpp
BBEngine/BBRenderer/Graphics/: Graphics.cpp
BBEngine/BBRenderer/Include/: BBException.h  BBRenderer.h  BBWindow.h  Camera.h  DepthStencil.h  DirectionalLight.h  Graphics.h  ShaderDefines.h  SpotLight.h
BBEngine/BBRenderer/Include/Bindable/: Bindable.h  BindableInclude.h  ConstantBuffer.h  CubeMap.h  IndexBuffer.h  InputLayout.h  PixelShader.h  Sampler.h  Texture.h  Topology.h  TransformBuf.h  VertexBuffer.h  VertexShader.h
BBEngine/BBRenderer/Include/DataTypes/: SharedRenderTypes.h
BBEngine/BBRenderer/Include/Drawable/: Box.h  DrawToTexture.h  Drawable.h  DrawableBase.h  Model.h  SkyBox.h
BBEngine/BBRenderer/Include/Lights/: DirectionalLight.h  PointLight.h  SpotLight.h
BBEngine/BBRenderer/Include/Utils/: GraphicsThrowMacros.h  WindowsThrowMacros.h
BBEngine/BBRenderer/Input/: Keyboard.cpp  Keyboard.h  Mouse.h
BBEngine/BBRenderer/RendererCommon/: CMakeLists.txt
BBEngine/BBRenderer/RendererCommon/Include/: Drawable.h  IGraphics.h  RenderDefinitions.h
BBEngine/BBRenderer/RendererCommon/Source/: Drawable.cpp
BBEngine/BBRenderer/Shader/: DefaultPS.hlsl  DefaultVS.hlsl  Lights.h  Materials.h  PSCubeMap.hlsl  PSDrawToTexture.hlsl  PSShadowMap.hlsl  PixelShader.hlsl  ShaderDefines.h  VSCubeMap.hlsl  VSShadowMap.hlsl  VertexShader.hlsl  Vertexconstant.h
BBEngine/BBRenderer/Source/: BBRenderer.cpp  Camera.cpp  DirectionalLight.cpp  SpotLight.cpp
BBEngine/BBRenderer/Source/BBException/: BBException.cpp
BBEngine/BBRenderer/Source/Bindable/: CubeMap.cpp  IndexBuffer.cpp  InputLayout.cpp  PixelShader.cpp  Sampler.cpp  Texture.cpp  Topology.cpp  TransformBuf.cpp  VertexBuffer.cpp  VertexShader.cpp
BBEngine/BBRenderer/Source/Drawable/: Box.cpp  Drawable.cpp  (+3 more)
BBEngine/BBRenderer/Window/: BBWindow.cpp  BBWindow.h
BBEngine/BBRenderer_DX11/: CMakeLists.txt
BBEngine/BBRenderer_DX11/Include/: Graphics.h
BBEngine/Common/: CMakeLists.txt
BBEngine/Common/Include/: BBWin.h  SharedRenderTypes.h
BBEngine/Lib/imgui/: CMakeLists.txt
BBEngine/Lib/stb_image/: CMakeLists.txt
BBEngine/UnitTest/: AllocatorTest.cpp  CMakeLists.txt  ContainerTest.cpp  DataLoadingTest.cpp  MathTest.cpp  SystemTest.cpp  ThreadPoolTest.cpp
BBEngine/UnitTest/Tests/: ContainerTest.cpp  DataLoadingTest.cpp  ThreadPoolTest.cpp
(+121 files in other folders)
